@@ -1,3 +1,7 @@
+2002-01-10  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-content-type-charset-alist): Add Emacs20/21 codepages.
+
 2001-11-20  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-ediff-buffers-exit-recursive): Kill ediff buffers
